remove elements from tabIndex that should not be traveled to by keyboard

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" />
   </head>
-  <body class="mat-typography mat-app-background">
+  <body
+    class="mat-typography mat-app-background"
+    tabIndex="-1">
     <app-root></app-root>
   </body>
 </html>
